--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="game-container">
         <h1>운 피하기 게임</h1>
-        <p>좌우 방향키로 운을 피하세요! 민기를 살려라!</p>
+        <p>떨어지는 운으로부터 민기를 살려라!</p>
         <div id="score-board">점수: <span id="score">0</span></div>
         <canvas id="gameCanvas" width="400" height="600"></canvas>
         <button id="start-btn">게임 시작</button>
