Add visual touch controls

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <p>떨어지는 운으로부터 민기를 살려라!</p>
         <div id="score-board">점수: <span id="score">0</span></div>
         <canvas id="gameCanvas" width="400" height="600"></canvas>
+        <div id="touch-controls">
+            <div id="left-btn" class="touch-btn">◀</div>
+            <div id="right-btn" class="touch-btn">▶</div>
+        </div>
         <button id="start-btn">게임 시작</button>
     </div>
     <script src="script.js"></script>
