Update page title and add OG tags for link sharing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>똥 피하기 게임</title>
+    <title>떨어지는 운으로부터 민기를 구하라!</title>
+
+    <!-- Open Graph Tags (For sharing links on KakaoTalk, etc.) -->
+    <meta property="og:title" content="떨어지는 운으로부터 민기를 구하라!">
+    <meta property="og:description" content="초대형 운을 피하고 살아남으세요! 모바일/PC 완벽 지원 🎮">
+    <meta property="og:image" content="똥.png"> <!-- Uses the game asset as preview icon if supported -->
     <link rel="stylesheet" href="style.css">
 </head>
 
